.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Service_Request_Lock_Fields__mdt.object
<CustomObject>
    <fields>
        <fullName>Incap311__Lock_Type__c</fullName>
        <label>Lock Type</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Activity_Ignore_Fields__c</fullName>
        <label>Service Activity Whitelist Fields</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Request_Ignore_Fields__c</fullName>
        <inlineHelpText>Fields on the case</inlineHelpText>
        <label>Service Request Whitelist Fields</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Service Request Locking Field Whitelist</label>
    <pluralLabel>Service Request Locking Field Whitelists</pluralLabel>
</CustomObject>